# microdragon

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  ENV_VARIABLES.md  INSTALL.md  LICENSE  README.md  requirements.txt
.github/: DEPLOYMENT.md
.github/workflows/: ci.yml  release.yml
automation/src/: engine.py
config/: nexa.example.toml
core/: Cargo.toml  build.rs
core/src/: main.rs
core/src/api/: middleware.rs  mod.rs  routes.rs
core/src/brain/: context.rs  cost_optimizer.rs  intent.rs  mod.rs  model_router.rs  planner.rs
core/src/cli/: commands.rs  display.rs  first_launch.rs  mod.rs  setup.rs  simple_mode.rs  stream_renderer.rs  theme.rs
core/src/cli/animation/: mod.rs  progress.rs  spinner.rs  status.rs  typewriter.rs
core/src/cli/interactive/: history.rs  input.rs  mod.rs  prompt.rs
core/src/cli/terminal/: caps.rs  mod.rs  platform.rs  writer.rs
core/src/config/: mod.rs  providers.rs
core/src/engine/: agents.rs  autonomous.rs  dispatcher.rs  event_bus.rs  executor.rs  mod.rs  module_registry.rs  task.rs
core/src/engine/pipeline/: mod.rs
core/src/harness/: anti_drift.rs  context_compressor.rs  dragon_md.rs  mod.rs  output_formatter.rs  skill_injector.rs
core/src/ipc/: bridge.rs  mod.rs
core/src/mcp/: mod.rs  registry.rs  server.rs
core/src/mcp/client/: http.rs  stdio.rs
core/src/memory/: mod.rs  sqlite.rs  vector.rs
core/src/security/: audit.rs  encryption.rs  mod.rs  permissions.rs  prompt_guard.rs  sandbox.rs
core/src/skills/: mod.rs
core/src/watch/: conditions.rs  daemon.rs  heartbeat.rs  mod.rs
docs/: FLYER_CREATION.md  FUTURE_FEATURES.md  MICRODRAGON_COMPLETE_ABILITIES.md  MICRODRAGON_CREATION_DOCUMENTATION.md
eval/: BENCHMARK_REPORT.md  NAME_OPTIONS.md
eval/benchmarks/: nexa_eval.py
eval/eval/reports/: latest_report.json
eval/reports/: latest_report.json  runtime_report.json
modules/advertising/src/: engine.py
modules/apps/knowledge/: app_knowledge_base.py
modules/apps/src/: engine.py
modules/assistant/src/: engine.py
modules/business/src/: engine.py
modules/calendar/src/: engine.py
modules/coding/src/: engine.py
modules/design/: flyer_pipeline.py
modules/design/src/: engine.py
modules/document/src/: engine.py
modules/email/src/: engine.py
modules/gaming/: README.md
modules/gaming/controller/: advanced_controller.py
modules/gaming/knowledge/: game_knowledge_base.py
modules/gaming/src/: cli_commands.py  engine.py
modules/gaming/vision/: game_vision.py
modules/github/src/: engine.py
modules/huggingface/src/: engine.py
modules/image_video/src/: engine.py
modules/presentation/src/: engine.py
modules/research/src/: engine.py
modules/responses/: scenarios.py
modules/security_expert/src/: engine.py
modules/simulation/src/: engine.py
modules/skill_registry/src/: engine.py
modules/skills/: SKILLS_GUIDE.md
modules/skills/src/: engine.py
modules/social/node_bridge/: package.json  whatsapp_bridge.js
modules/social/src/discord/: bot.py
modules/social/src/telegram/: bot.py
modules/social/x_api/: engine.py
modules/tech_skills/src/: engine.py
modules/training/src/: engine.py
modules/voice/src/: engine.py
modules/web_design/src/: engine.py
npm/: PUBLISHING.md  package.json
npm/lib/: index.js
npm/scripts/: postinstall.js
persistence/src/: mod.rs
scripts/: install.sh
shared/src/: mod.rs
tests/: integration_tests.rs
